# pytorch-cka

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cka/: __init__.py  cka.py
docs/benchmarks/: memory_efficiency_comparison.ipynb  speed_comparison_18_layers.ipynb
examples/: basic_comparison.py
pytorch_cka/: __init__.py  cka.py  core.py  utils.py  viz.py
tests/: __init__.py  test_cka.py  test_core.py  test_viz.py
torchcka/: __init__.py  cka.py  config.py  core.py  utils.py  viz.py
